Bug 91467 - Bughunting: Print preview - numbers on the left side are not readable (wrong place)
Summary: Bughunting: Print preview - numbers on the left side are not readable (wrong ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: target:5.1.0 target:5.0.0.1
Keywords: regression
: 91765 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-22 11:38 UTC by szl25497
Modified: 2016-10-25 19:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (126.17 KB, image/png)
2015-05-22 20:29 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description szl25497 2015-05-22 11:38:18 UTC
When you press in writer on print, you get the print preview. On the left you can see the page. How wide it is stands above the page. How long it is should stand on the left of the page. But this value is not readable. Its not in the middle. Its much more down and the numbers are not readable because of that. 

Windows 7, 64bit, LibreOfficeDev_5.0.0.0.beta1_Win_x64.msi
Comment 1 m_a_riosv 2015-05-22 12:13:45 UTC
Confirmed, it should be vertical like previous versions.
Comment 2 szl25497 2015-05-22 13:35:41 UTC
Same on 32bit: LibreOfficeDev_5.0.0.0.beta1_Win_x86.msi
Comment 3 Adolfo Jayme Barrientos 2015-05-22 17:56:48 UTC
Seems you’re talking about a UI problem. Got a screenshot?
Comment 4 m_a_riosv 2015-05-22 20:29:46 UTC
Created attachment 115857 [details]
Screenshot
Comment 5 Adolfo Jayme Barrientos 2015-05-31 10:19:57 UTC
*** Bug 91765 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2015-06-19 14:27:18 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c7658a1efd3ce9158ff9db1dd30b681d24462b51

tdf#91467 FixedText vertical orientation restored

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-06-19 14:28:52 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cbf61deb87dad3868c3a65279daf540a870ff2b4&h=libreoffice-5-0

tdf#91467 FixedText vertical orientation restored

It will be available in 5.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.