tdf#91467 FixedText vertical orientation restored

Change-Id: Ic4b74d769ee4370c5182c9921483c7ec0b2c7a94
(cherry picked from commit c7658a1efd3ce9158ff9db1dd30b681d24462b51)